<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".mvp.view.activity.MySettingActivity"
        android:orientation="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal"
            android:background="#F2F2F2"
            android:gravity="center_vertical">
        <ImageView android:id="@+id/image_finsh"
                   android:layout_width="24dp"
                   android:layout_height="24dp"
                   android:layout_marginLeft="12dp"
                   android:src="@mipmap/common_nav_btn_back_n"/>
        <View android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:layout_marginRight="36dp"
                android:textSize="30sp"/>
        <View android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1"/>
    </LinearLayout>
    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="vertical">
            <LinearLayout android:id="@+id/user_head_linear"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/user_head"/>
                <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1" />
                <com.facebook.drawee.view.SimpleDraweeView
                        android:id="@+id/user_head_simple"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        app:roundAsCircle="true"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/user_name"/>
                <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1" />
                <TextView
                        android:id="@+id/user_name_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#888"
                        android:textSize="12sp"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/user_sex"/>
                <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1" />
                <TextView
                        android:id="@+id/user_sex_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#888"
                        android:textSize="12sp"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/user_sign"/>
                <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1" />
                <TextView android:id="@+id/user_sign_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#888"
                        android:textSize="12sp"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="vertical">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/user_bir"/>
                <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1" />
                <TextView android:id="@+id/user_bir_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#888"
                        android:textSize="12sp"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/user_tel"/>
                <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1" />
                <TextView android:id="@+id/user_tel_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#888"
                        android:textSize="12sp"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/user_emile"/>
                <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1" />
                <TextView android:id="@+id/user_emile_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#888"
                        android:textSize="12sp"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="vertical">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/user_num"/>
                <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1" />
                <TextView android:id="@+id/user_num_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#888"
                        android:textSize="12sp"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/user_vip"/>
                <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1" />
                <TextView android:id="@+id/user_vip_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#888"
                        android:textSize="12sp"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/Face_ID"/>
                <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1" />
                <TextView android:id="@+id/Face_ID_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#888"
                        android:textSize="12sp"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="#ff5757"
                        android:text="@string/end_login"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>