<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mvp.view.activity.UserPushCommentActivity"
        android:orientation="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView android:id="@+id/cancel_comment_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:padding="12dp"
                android:text="@string/cancel_comment"/>
        <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>
        <TextView android:id="@+id/push_comment_text"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:textColor="#20affa"
                  android:padding="12dp"
                  android:text="@string/push_comment"/>
    </LinearLayout>
    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:padding="1dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="187dp"
                android:background="#fff"
                android:orientation="vertical">
            <EditText android:id="@+id/char_edit"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="#00000000"
                    android:inputType="textMultiLine"
                    android:maxLength="300"
                    android:gravity="start"
                    android:layout_weight="1"/>
            <TextView android:id="@+id/char_num_text"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="end"
                    android:text="@string/char_num"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.RecyclerView
            android:id="@+id/user_push_comment_image_recycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
</LinearLayout>